<resources>
    <string name="app_name">Movie Carnival</string>
    <string name="sort_popularity">Order by Popularity</string>
    <string name="sort_ratings">Order by Ratings</string>
    <string name="sort_fav">Favourites</string>
    <string name="reviews">Reviews</string>
    <string name="imagebtn">Imagebtn</string>
    <string name="trailer">Trailer</string>
    <string name="overview">Overview</string>
    <string name="movie_director">MOVIE DIRECTOR</string>
    <string name="votes">VOTES</string>
    <string name="rating">RATING</string>
    <string name="release">RELEASE</string>
    <string name="sort_upcoming">Upcoming</string>
    <string name="sort_now_playing">Now Playing</string>
    <string name="enterKeyword">Search for movies</string>
    <string name="genre">Genres</string>
</resources>
